-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.3
-
Clang 9.0
-
-
5ba8cc908 (134-based-refactor)
When using clang to build on Linux it will fail due to the atomic library not being linked against. It needs to be added to the core_module.pro so that it will build. The error is:
/usr/bin/ld: /home/holg/development/lib/qt-everywhere-src-5.15.3/qtwebengine/src/core/release/obj/base/base/base_jumbo_28.o: in function `base::internal::ThreadGroupImpl::IncrementTasksRunningLockRequired(base::TaskPriority)': base_jumbo_28.cc:(.text._ZN4base8internal15ThreadGroupImpl33IncrementTasksRunningLockRequiredENS_12TaskPriorityE+0x85): undefined reference to `__atomic_store_2' /usr/bin/ld: /home/holg/development/lib/qt-everywhere-src-5.15.3/qtwebengine/src/core/release/obj/base/base/base_jumbo_28.o: in function `base::internal::ThreadGroupImpl::DecrementTasksRunningLockRequired(base::TaskPriority)': base_jumbo_28.cc:(.text._ZN4base8internal15ThreadGroupImpl33DecrementTasksRunningLockRequiredENS_12TaskPriorityE+0x85): undefined reference to `__atomic_store_2' /usr/bin/ld: /home/holg/development/lib/qt-everywhere-src-5.15.3/qtwebengine/src/core/release/obj/base/base/base_jumbo_28.o: in function `base::internal::ThreadGroupImpl::WorkerThreadDelegateImpl::BlockingStarted(base::BlockingType)': base_jumbo_28.cc:(.text._ZN4base8internal15ThreadGroupImpl24WorkerThreadDelegateImpl15BlockingStartedENS_12BlockingTypeE+0x160): undefined reference to `__atomic_store_2' /usr/bin/ld: /home/holg/development/lib/qt-everywhere-src-5.15.3/qtwebengine/src/core/release/obj/base/base/base_jumbo_28.o: in function `base::internal::ThreadGroupImpl::WorkerThreadDelegateImpl::BlockingTypeUpgraded()': base_jumbo_28.cc:(.text._ZN4base8internal15ThreadGroupImpl24WorkerThreadDelegateImpl20BlockingTypeUpgradedEv+0x133): undefined reference to `__atomic_store_2' /usr/bin/ld: /home/holg/development/lib/qt-everywhere-src-5.15.3/qtwebengine/src/core/release/obj/base/base/base_jumbo_28.o: in function `base::internal::ThreadGroupImpl::WorkerThreadDelegateImpl::BlockingEnded()': base_jumbo_28.cc:(.text._ZN4base8internal15ThreadGroupImpl24WorkerThreadDelegateImpl13BlockingEndedEv+0xa8): undefined reference to`__atomic_store_2' /usr/bin/ld: /home/holg/development/lib/qt-everywhere-src-5.15.3/qtwebengine/src/core/release/obj/base/base/base_jumbo_28.o:base_ jumbo_28.cc:(.text._ZN4base8internal15ThreadGroupImpl24WorkerThreadDelegateImpl13BlockingEndedEv+0x133): more undefined references to `__atomic_store_2' follow /usr/bin/ld: /home/holg/development/lib/qt-everywhere-src-5.15.3/qtwebengine/src/core/release/obj/base/base/base_jumbo_28.o: in function `base::internal::ThreadPoolImpl::ShouldYield(base::internal::TaskSource const*) const': base_jumbo_28.cc:(.text._ZNK4base8internal14ThreadPoolImpl11ShouldYieldEPKNS0_10TaskSourceE+0x135): undefined reference to `__atomic_load_2' clang-9.0: error: linker command failed with exit code 1 (use -v to see invocation)
For Gerrit Dashboard: QTBUG-93294 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
347169,2 | Make clang to inline load/store atomic calls for YieldSortKey struct | 87-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
347956,2 | Make clang to inline load/store atomic calls for YieldSortKey struct | 88-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |