Make clang to inline load/store atomic calls for YieldSortKey struct

Is needed for linux-clang spec build to not depend on atomic lib

Task-number: QTBUG-93294
Change-Id: I9fcb275b9dd7973653c7897c1e19ddb9f6daeb58
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>